<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    app:contentPadding="0dp">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/device_connection_desc"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_device_connection" />

        <Button
            android:id="@+id/scanButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/device_desc_label_pair"
            android:textColor="#DE000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatar_image" />

        <TextView
            android:id="@+id/deviceNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/device_desc_label_deviceName"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintStart_toEndOf="@+id/avatar_image"
            app:layout_constraintTop_toTopOf="@+id/avatar_image" />

        <TextView
            android:id="@+id/serialNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/device_desc_label_serialNumber"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
            app:layout_constraintStart_toEndOf="@+id/avatar_image" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/device_connection_placeholder_deviceName"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            app:layout_constraintEnd_toStartOf="@+id/scanButton"
            app:layout_constraintTop_toTopOf="@+id/avatar_image" />

        <TextView
            android:id="@+id/serialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/device_connection_placeholder_serialNumber"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
            app:layout_constraintEnd_toStartOf="@+id/scanButton" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.card.MaterialCardView>