<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!--<android.support.v7.widget.CardView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="300dp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_marginBottom="10dp"-->
    <!--app:cardCornerRadius="15dp"-->
    <!--app:cardElevation="4dp">-->

    <!--<TableLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingStart="30dp"-->
    <!--android:paddingTop="15dp"-->
    <!--android:paddingEnd="30dp"-->
    <!--android:paddingBottom="15dp"-->
    <!--android:stretchColumns="1">-->

    <!--<TableRow-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="fill_horizontal">-->

    <!--<TextView-->
    <!--android:id="@+id/deviceNameLabel"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="start"-->
    <!--android:text="Device Name"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/deviceName"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="end"-->
    <!--android:text="MagSpoofBT"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="fill_horizontal">-->

    <!--<TextView-->
    <!--android:id="@+id/connectionStatusLabel"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="start"-->
    <!--android:text="Device Name"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/connectionStatus"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="end"-->
    <!--android:text="MagSpoofBT"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="fill_horizontal">-->

    <!--<TextView-->
    <!--android:id="@+id/serialNumberLabel"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="start"-->
    <!--android:text="Device Name"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/serialNumber"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="end"-->
    <!--android:text="MagSpoofBT"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->
    <!--</TableRow>-->

    <!--<TableRow-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="fill_horizontal">-->

    <!--<TextView-->
    <!--android:id="@+id/fourthParameterLabel"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="start"-->
    <!--android:text="Device Name"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/fourthParameter"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="end"-->
    <!--android:text="MagSpoofBT"-->
    <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--android:textSize="18sp" />-->
    <!--</TableRow>-->
    <!--</TableLayout>-->

    <!--</android.support.v7.widget.CardView>-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/device_connection_desc"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/properties_table"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_device_connection" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/device_connection_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#DE000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar_image"
            app:layout_constraintTop_toTopOf="@+id/avatar_image" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/device_connection_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#8A000000"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar_image" />

        <TableLayout
            android:id="@+id/properties_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:stretchColumns="1"
            app:layout_constraintBottom_toTopOf="@+id/supporting_text"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_image"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/deviceNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:text="@string/device_connection_label_deviceName"
                    android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle" />

                <TextView
                    android:id="@+id/deviceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="10dp"
                    android:text="@string/device_connection_placeholder_deviceName"
                    android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/connectionStatusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:text="@string/device_connection_label_connectionStatus"
                    android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle" />

                <TextView
                    android:id="@+id/connectionStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="10dp"
                    android:text="@string/device_connection_status_default"
                    android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/serialNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:text="@string/device_connection_label_serialNumber"
                    android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle" />

                <TextView
                    android:id="@+id/serialNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="10dp"
                    android:text="@string/device_connection_placeholder_serialNumber"
                    android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Subtitle" />
            </TableRow>

        </TableLayout>

        <!--<ImageView-->
        <!--android:id="@+id/media_image"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--app:layout_constraintDimensionRatio="H,16:9"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/avatar_image"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/supporting_text"/>-->

        <TextView
            android:id="@+id/supporting_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#DE000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/properties_table" />

        <Button
            android:id="@+id/scanButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/device_connection_label_actions_scan"
            android:textColor="#DE000000"
            app:layout_constraintEnd_toStartOf="@+id/unpairButton"
            app:layout_constraintTop_toBottomOf="@+id/supporting_text" />

        <Button
            android:id="@+id/unpairButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/device_connection_label_actions_unpair"
            android:textColor="#DE000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supporting_text" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/deviceListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>